@@ -1985,6 +1985,7 @@ extern int convert_p_to_rwa_tmpdir(char *origen, char *destino);
                         "WAV to RWA",
                         "WAV to TAP",
                         "WAV to P",
+                        "WAV to P81",
                         "WAV to O",
                         NULL};
 
@@ -2023,6 +2024,11 @@ extern int convert_p_to_rwa_tmpdir(char *origen, char *destino);
                         break;
 
                         case 3:
+                                sprintf(archivo_destino,"%s/%s.p81",directorio,archivo);
+                                enhanced_convert_realtape_to_p_p81(fullpath, archivo_destino);
+                        break;
+
+                        case 4:
                                 sprintf(archivo_destino,"%s/%s.o",directorio,archivo);
                                 convert_realtape_to_po(fullpath, archivo_destino,NULL,0);
                         break;
